--- a/Carrusel/index.css
+++ b/Carrusel/index.css
@@ -2,24 +2,49 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-image:"ladivcomed.jpg";
+    text-align: center;
 }
 
 .ContenedorCarrusel{
     background-color: firebrick;
-    border: 5px, solid, black;
-    height: 200px;
+    height: 700px;
+    overflow: hidden;
 }
 
-.itemCar-1{
+.itemCar{
     background-color: lightcyan;
-    position: relative;
     height: 100%;
+    position: relative;
+}
+
+section.itemCar.uno{
+    background-color: red;
+}
+
+section.itemCar.dos{
+    background-color: gray;
+}
+
+section.itemCar.tres{
+    background-color: whitesmoke;
 }
 
 .ContenidoCar{
-    background-color: blue;
+    height: 100%;
 }
 
 .flechasCar{
-    background-color:wheat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    top: 0;
+}
+
+h1{
+    text-align: center;
 }
