--- a/Practica 2/Public/Estilos/contacto.css
+++ b/Practica 2/Public/Estilos/contacto.css
@@ -6,7 +6,7 @@ body, h1, h2, h3, p, ul, li, table, td, a {
 h1 {
     text-align: center;
     margin-top: 50px;
-    color: #DC0000; /* Rojo principal de la F1 */
+    color: #DC0000;
 }
 
 
