--- a/clase10/Public/Estilos/index.css
+++ b/clase10/Public/Estilos/index.css
@@ -22,3 +22,18 @@ nav{
 a{
     text-decoration: none;
 }
+
+.seccion-1{
+    margin-left: 100px;
+    width: 800px;
+    text-align: center;
+}
+
+h1{
+    margin-top: 10px;
+    text-align: center;
+}
+
+.seccion-1 p{
+    text-wrap: balance;
+}
